Fix header to not spill over width

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,18 +2,10 @@
     
 }
 
-.header li {
-    background-color: white;
-    border: 2px solid black;
-    border-radius: 10px;
-    padding: 10px;
-    font-size: large;
-}
-
 .masterflexcontainer {
     display: flex;
     flex-direction: column;
-    min-height: 100vh;
+    min-height: 100vh;   
 }
 
 .masterflexcontainer > * {
@@ -21,7 +13,7 @@
 }
 
 .header {
-   background-color: rgb(225, 207, 207); 
+   background-color: rgb(225, 207, 207);
 }
 
 .header nav {
@@ -35,6 +27,17 @@
     display: flex;
     gap: 10px;
     list-style: none;
+    flex-wrap: wrap;
+}
+
+.header li {
+    display: flex;s
+    flex: 1;
+    background-color: white;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 8px;
+    font-size: large;
 }
 
 .main {
